--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.0.0",
     "formidable": "^3.5.1",
     "monaco-editor": "^0.44.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
